Fix a spacing issue. Used #header instead of .header

--- a/htdocs/css/site.css
+++ b/htdocs/css/site.css
@@ -678,7 +678,7 @@ table.sidebyside .commentflag.draft {
   padding: 0px;
 }
 
-.review-request #header {
+.review-request .header {
   margin: 5px;
 }
 
